--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         </a>
         <span class="badge badge-primary">{{ user['password'] }}</span>
         <span class="badge badge-primary">{{ user['user_id'] }}</span>
+        <span class="badge badge-primary">{{ user['user_id'] }}</span>
         <hr>
     {% endfor %}
 {% endblock %}
